feat: configure PostgreSQL integration, isolated test profile, and CORS fixes